--- a/samples/ADCExtension/ADCExtension/en.lproj/MainStoryboard.storyboard
+++ b/samples/ADCExtension/ADCExtension/en.lproj/MainStoryboard.storyboard
@@ -1,49 +1,50 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YkO-yp-Ce0"/>
+                        <viewControllerLayoutGuide type="bottom" id="fuX-ea-XHR"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uwg-us-NeS">
+                                <rect key="frame" x="114" y="20" width="92" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Find Konashi">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="find:" destination="2" eventType="touchUpInside" id="bDS-OJ-qmd"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h15-L7-3JY">
+                                <rect key="frame" x="90" y="58" width="141" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Disconnect Konashi">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="disconnect:" destination="2" eventType="touchUpInside" id="UlV-YX-hLa"/>
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="ADC Value" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ton-Qs-E6h">
+                                <rect key="frame" x="119" y="96" width="82" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnD-L2-Ldb">
+                                <rect key="frame" x="139" y="125" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -51,14 +52,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="uwg-us-NeS" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="1P7-hO-mNu"/>
-                            <constraint firstItem="h15-L7-3JY" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="21j-yW-NzQ"/>
-                            <constraint firstItem="h15-L7-3JY" firstAttribute="centerX" secondItem="uwg-us-NeS" secondAttribute="centerX" type="default" id="5j0-32-YD4"/>
-                            <constraint firstItem="Ton-Qs-E6h" firstAttribute="top" secondItem="h15-L7-3JY" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="6Tx-pi-5yX"/>
-                            <constraint firstItem="fnD-L2-Ldb" firstAttribute="centerX" secondItem="Ton-Qs-E6h" secondAttribute="centerX" type="default" id="H6O-Gd-dCt"/>
-                            <constraint firstItem="Ton-Qs-E6h" firstAttribute="centerX" secondItem="h15-L7-3JY" secondAttribute="centerX" type="default" id="ffW-Vx-On9"/>
-                            <constraint firstItem="fnD-L2-Ldb" firstAttribute="top" secondItem="Ton-Qs-E6h" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="gbQ-83-Cc7"/>
-                            <constraint firstItem="h15-L7-3JY" firstAttribute="top" secondItem="uwg-us-NeS" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="vtl-1w-DmL"/>
+                            <constraint firstItem="uwg-us-NeS" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" id="1P7-hO-mNu"/>
+                            <constraint firstItem="h15-L7-3JY" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" id="21j-yW-NzQ"/>
+                            <constraint firstItem="h15-L7-3JY" firstAttribute="centerX" secondItem="uwg-us-NeS" secondAttribute="centerX" id="5j0-32-YD4"/>
+                            <constraint firstItem="Ton-Qs-E6h" firstAttribute="top" secondItem="h15-L7-3JY" secondAttribute="bottom" constant="8" symbolic="YES" id="6Tx-pi-5yX"/>
+                            <constraint firstItem="fnD-L2-Ldb" firstAttribute="centerX" secondItem="Ton-Qs-E6h" secondAttribute="centerX" id="H6O-Gd-dCt"/>
+                            <constraint firstItem="Ton-Qs-E6h" firstAttribute="centerX" secondItem="h15-L7-3JY" secondAttribute="centerX" id="ffW-Vx-On9"/>
+                            <constraint firstItem="fnD-L2-Ldb" firstAttribute="top" secondItem="Ton-Qs-E6h" secondAttribute="bottom" constant="8" symbolic="YES" id="gbQ-83-Cc7"/>
+                            <constraint firstItem="h15-L7-3JY" firstAttribute="top" secondItem="uwg-us-NeS" secondAttribute="bottom" constant="8" symbolic="YES" id="vtl-1w-DmL"/>
                         </constraints>
                     </view>
                     <connections>
@@ -69,19 +70,6 @@
             </objects>
         </scene>
     </scenes>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="disconnect:"/>
-                <relationship kind="action" name="find:"/>
-                <relationship kind="outlet" name="adcValueLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
