--- a/samples/AioSample/AioSample/en.lproj/MainStoryboard.storyboard
+++ b/samples/AioSample/AioSample/en.lproj/MainStoryboard.storyboard
@@ -1,68 +1,66 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" promptedForUpgradeToXcode5="NO" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8jn-3Z-BOY"/>
+                        <viewControllerLayoutGuide type="bottom" id="LZ4-cZ-JlP"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gGK-0S-Vie">
+                                <rect key="frame" x="100" y="57" width="120" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="yyC-x4-07i"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Find">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="find:" destination="2" eventType="touchUpInside" id="jZH-qm-wbI"/>
                                 </connections>
                             </button>
                             <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Ready" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rPW-tp-0vw">
+                                <rect key="frame" x="136" y="122" width="49" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rz0-IY-hNz">
+                                <rect key="frame" x="105" y="342" width="110" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Write AIO1 1.0V">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="setVoltage1000:" destination="2" eventType="touchUpInside" id="J08-7U-HwN"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="98K-QN-qG7">
+                                <rect key="frame" x="105" y="183" width="110" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="110" id="Zy3-ea-dk0"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Read AIO0">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="requestReadAio0:" destination="2" eventType="touchUpInside" id="9ys-oX-fKL"/>
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="0.0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bCW-xN-I6e">
+                                <rect key="frame" x="104" y="240" width="79" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="79" id="eRo-yg-dc7"/>
                                 </constraints>
@@ -71,6 +69,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="V" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Grj-x8-haQ">
+                                <rect key="frame" x="179" y="240" width="19" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="19" id="s3R-6z-Weh"/>
                                 </constraints>
@@ -81,18 +80,18 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="98K-QN-qG7" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="8h7-oC-9vo"/>
+                            <constraint firstItem="98K-QN-qG7" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" id="8h7-oC-9vo"/>
                             <constraint firstItem="rPW-tp-0vw" firstAttribute="top" secondItem="3" secondAttribute="top" constant="122" id="DqI-Wg-2CI"/>
                             <constraint firstItem="Grj-x8-haQ" firstAttribute="top" secondItem="3" secondAttribute="top" constant="240" id="MT4-q4-qHe"/>
                             <constraint firstItem="98K-QN-qG7" firstAttribute="top" secondItem="3" secondAttribute="top" constant="183" id="bx6-Qy-fkT"/>
                             <constraint firstAttribute="trailing" secondItem="Grj-x8-haQ" secondAttribute="trailing" constant="122" id="dFM-qc-IZ7"/>
                             <constraint firstItem="gGK-0S-Vie" firstAttribute="top" secondItem="3" secondAttribute="top" constant="57" id="fsZ-fu-i2c"/>
-                            <constraint firstItem="98K-QN-qG7" firstAttribute="centerX" secondItem="rz0-IY-hNz" secondAttribute="centerX" type="default" id="h3H-9x-6Pm"/>
+                            <constraint firstItem="98K-QN-qG7" firstAttribute="centerX" secondItem="rz0-IY-hNz" secondAttribute="centerX" id="h3H-9x-6Pm"/>
                             <constraint firstItem="bCW-xN-I6e" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="104" id="m1G-sr-OBK"/>
-                            <constraint firstItem="Grj-x8-haQ" firstAttribute="baseline" secondItem="bCW-xN-I6e" secondAttribute="baseline" type="default" id="oTZ-mZ-TH7"/>
-                            <constraint firstItem="98K-QN-qG7" firstAttribute="centerX" secondItem="rPW-tp-0vw" secondAttribute="centerX" type="default" id="qUt-fQ-kGF"/>
+                            <constraint firstItem="Grj-x8-haQ" firstAttribute="baseline" secondItem="bCW-xN-I6e" secondAttribute="baseline" id="oTZ-mZ-TH7"/>
+                            <constraint firstItem="98K-QN-qG7" firstAttribute="centerX" secondItem="rPW-tp-0vw" secondAttribute="centerX" id="qUt-fQ-kGF"/>
                             <constraint firstAttribute="bottom" secondItem="rz0-IY-hNz" secondAttribute="bottom" constant="196" id="rbf-0n-aP7"/>
-                            <constraint firstItem="rPW-tp-0vw" firstAttribute="centerX" secondItem="gGK-0S-Vie" secondAttribute="centerX" type="default" id="s9W-vx-zsg"/>
+                            <constraint firstItem="rPW-tp-0vw" firstAttribute="centerX" secondItem="gGK-0S-Vie" secondAttribute="centerX" id="s9W-vx-zsg"/>
                         </constraints>
                     </view>
                     <connections>
@@ -105,21 +104,6 @@
             <point key="canvasLocation" x="79" y="39"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="find:"/>
-                <relationship kind="action" name="requestReadAio0:"/>
-                <relationship kind="action" name="setVoltage1000:"/>
-                <relationship kind="outlet" name="adcValue" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="statusMessage" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
