--- a/samples/GroveExtension/GroveExtension/en.lproj/MainStoryboard.storyboard
+++ b/samples/GroveExtension/GroveExtension/en.lproj/MainStoryboard.storyboard
@@ -1,38 +1,37 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" promptedForUpgradeToXcode5="NO" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="247-xX-ecc"/>
+                        <viewControllerLayoutGuide type="bottom" id="InT-V4-P2m"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QjV-kg-Dqt">
+                                <rect key="frame" x="114" y="20" width="92" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Find Konashi">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="find:" destination="2" eventType="touchUpInside" id="7Ju-5F-3Lb"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4af-xY-vkX">
+                                <rect key="frame" x="90" y="58" width="141" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Disconnect Konashi">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="disconnect:" destination="2" eventType="touchUpInside" id="10l-Ye-Ttt"/>
@@ -41,10 +40,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="4af-xY-vkX" firstAttribute="top" secondItem="QjV-kg-Dqt" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="Mug-JT-FOp"/>
-                            <constraint firstItem="QjV-kg-Dqt" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="V4E-kK-vcK"/>
-                            <constraint firstItem="QjV-kg-Dqt" firstAttribute="centerX" secondItem="4af-xY-vkX" secondAttribute="centerX" type="default" id="YPp-OR-52N"/>
-                            <constraint firstItem="4af-xY-vkX" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="dWp-LS-CjJ"/>
+                            <constraint firstItem="4af-xY-vkX" firstAttribute="top" secondItem="QjV-kg-Dqt" secondAttribute="bottom" constant="8" symbolic="YES" id="Mug-JT-FOp"/>
+                            <constraint firstItem="QjV-kg-Dqt" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" id="V4E-kK-vcK"/>
+                            <constraint firstItem="QjV-kg-Dqt" firstAttribute="centerX" secondItem="4af-xY-vkX" secondAttribute="centerX" id="YPp-OR-52N"/>
+                            <constraint firstItem="4af-xY-vkX" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" id="dWp-LS-CjJ"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -52,18 +51,6 @@
             </objects>
         </scene>
     </scenes>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="disconnect:"/>
-                <relationship kind="action" name="find:"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
