--- a/samples/I2cSample/I2cSample/en.lproj/MainStoryboard.storyboard
+++ b/samples/I2cSample/I2cSample/en.lproj/MainStoryboard.storyboard
@@ -1,46 +1,47 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" promptedForUpgradeToXcode5="NO" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <deployment identifier="iOS"/>
+        <development version="6000" identifier="xcode"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YDy-1x-Gzj"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZTd-gc-2ze"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fRt-y9-oXW">
+                                <rect key="frame" x="98" y="54" width="125" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="125" id="x90-JN-hAt"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Find">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="find:" destination="2" eventType="touchUpInside" id="NiD-sX-SbP"/>
                                 </connections>
                             </button>
                             <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Ready" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rnC-lh-xJE">
+                                <rect key="frame" x="136" y="111" width="49" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uNZ-NO-q4B">
+                                <rect key="frame" x="94" y="206" width="133" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Show DOWNLOAD">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="clearLcd:" destination="2" eventType="touchUpInside" id="ca3-pm-F5b"/>
@@ -53,9 +54,9 @@
                             <constraint firstItem="uNZ-NO-q4B" firstAttribute="top" secondItem="3" secondAttribute="top" constant="206" id="4Tm-9q-bAL"/>
                             <constraint firstItem="fRt-y9-oXW" firstAttribute="top" secondItem="3" secondAttribute="top" constant="54" id="BYf-98-B5x"/>
                             <constraint firstItem="rnC-lh-xJE" firstAttribute="top" secondItem="3" secondAttribute="top" constant="111" id="CfG-Mi-2iz"/>
-                            <constraint firstItem="rnC-lh-xJE" firstAttribute="centerX" secondItem="fRt-y9-oXW" secondAttribute="centerX" type="default" id="Dka-mR-hyn"/>
-                            <constraint firstItem="uNZ-NO-q4B" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="ULU-Y7-6TP"/>
-                            <constraint firstItem="uNZ-NO-q4B" firstAttribute="centerX" secondItem="rnC-lh-xJE" secondAttribute="centerX" type="default" id="pDD-UX-adk"/>
+                            <constraint firstItem="rnC-lh-xJE" firstAttribute="centerX" secondItem="fRt-y9-oXW" secondAttribute="centerX" id="Dka-mR-hyn"/>
+                            <constraint firstItem="uNZ-NO-q4B" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" id="ULU-Y7-6TP"/>
+                            <constraint firstItem="uNZ-NO-q4B" firstAttribute="centerX" secondItem="rnC-lh-xJE" secondAttribute="centerX" id="pDD-UX-adk"/>
                         </constraints>
                     </view>
                     <connections>
@@ -66,19 +67,6 @@
             </objects>
         </scene>
     </scenes>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="clearLcd:"/>
-                <relationship kind="action" name="find:"/>
-                <relationship kind="outlet" name="statusMessage" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
