--- a/samples/PwmDrive/PwmDrive/en.lproj/MainStoryboard.storyboard
+++ b/samples/PwmDrive/PwmDrive/en.lproj/MainStoryboard.storyboard
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" variant="6xAndEarlier" propertyAccessControl="none" useAutolayout="YES" promptedForUpgradeToXcode5="NO" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" promptedForUpgradeToXcode5="NO" initialViewController="2">
     <dependencies>
         <deployment identifier="iOS"/>
-        <development version="4600" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
@@ -10,77 +9,65 @@
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="I7g-os-5Br"/>
+                        <viewControllerLayoutGuide type="bottom" id="mlU-BA-0Rd"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="efg-nY-bFi">
-                                <rect key="frame" x="80" y="71" width="160" height="44"/>
+                                <rect key="frame" x="80" y="71" width="160" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="160" id="X5N-9j-aa1"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Find">
-                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="find:" destination="2" eventType="touchUpInside" id="0fM-I5-6N8"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qyO-91-f8U">
-                                <rect key="frame" x="50" y="273" width="56" height="44"/>
+                                <rect key="frame" x="50" y="273" width="32" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="20%">
-                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="changeLedBrightness20:" destination="2" eventType="touchUpInside" id="yxC-kn-s7g"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BBR-rp-sJm">
-                                <rect key="frame" x="217" y="273" width="56" height="44"/>
+                                <rect key="frame" x="241" y="273" width="32" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="80%">
-                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="changeLedBrightness80:" destination="2" eventType="touchUpInside" id="EtB-ye-lNR"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fwd-OZ-2cG">
-                                <rect key="frame" x="132" y="273" width="56" height="44"/>
+                                <rect key="frame" x="144" y="273" width="32" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="50%">
-                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="changeLedBrightness50:" destination="2" eventType="touchUpInside" id="uoP-jt-y80"/>
                                 </connections>
                             </button>
-                            <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Ready" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ImB-Gc-Qpa">
-                                <rect key="frame" x="139" y="139" width="49" height="21"/>
+                            <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Ready" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ImB-Gc-Qpa">
+                                <rect key="frame" x="127" y="139" width="49" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="G8k-1b-2X3">
-                                <rect key="frame" x="37" y="345" width="247" height="31"/>
+                                <rect key="frame" x="37" y="365" width="247" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="243" id="TGO-f2-SuH"/>
                                 </constraints>
@@ -88,7 +75,7 @@
                                     <action selector="changeLedBrightnessBar:" destination="2" eventType="valueChanged" id="Efa-gb-j8t"/>
                                 </connections>
                             </slider>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="LED Brightness" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FGr-h4-53Q">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="LED Brightness" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FGr-h4-53Q">
                                 <rect key="frame" x="20" y="232" width="119" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -97,20 +84,20 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="fwd-OZ-2cG" firstAttribute="trailing" secondItem="ImB-Gc-Qpa" secondAttribute="trailing" type="default" id="1iv-Pw-thy"/>
+                            <constraint firstItem="fwd-OZ-2cG" firstAttribute="trailing" secondItem="ImB-Gc-Qpa" secondAttribute="trailing" id="1iv-Pw-thy"/>
                             <constraint firstItem="efg-nY-bFi" firstAttribute="top" secondItem="3" secondAttribute="top" constant="71" id="A2c-jl-9o5"/>
-                            <constraint firstItem="FGr-h4-53Q" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Ag1-Yw-feM"/>
-                            <constraint firstItem="fwd-OZ-2cG" firstAttribute="baseline" secondItem="qyO-91-f8U" secondAttribute="baseline" type="default" id="DfO-O7-PGc"/>
-                            <constraint firstItem="G8k-1b-2X3" firstAttribute="centerX" secondItem="fwd-OZ-2cG" secondAttribute="centerX" type="default" id="DlX-Kk-xjB"/>
+                            <constraint firstItem="FGr-h4-53Q" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" id="Ag1-Yw-feM"/>
+                            <constraint firstItem="fwd-OZ-2cG" firstAttribute="baseline" secondItem="qyO-91-f8U" secondAttribute="baseline" id="DfO-O7-PGc"/>
+                            <constraint firstItem="G8k-1b-2X3" firstAttribute="centerX" secondItem="fwd-OZ-2cG" secondAttribute="centerX" id="DlX-Kk-xjB"/>
                             <constraint firstAttribute="trailing" secondItem="BBR-rp-sJm" secondAttribute="trailing" constant="47" id="UJm-cP-jIh"/>
                             <constraint firstItem="qyO-91-f8U" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="50" id="X2u-iB-vXO"/>
                             <constraint firstAttribute="bottom" secondItem="G8k-1b-2X3" secondAttribute="bottom" constant="173" id="diJ-s7-UP0"/>
                             <constraint firstItem="ImB-Gc-Qpa" firstAttribute="top" secondItem="3" secondAttribute="top" constant="139" id="eTh-8h-UBZ"/>
                             <constraint firstItem="qyO-91-f8U" firstAttribute="top" secondItem="3" secondAttribute="top" constant="273" id="jy8-SG-JJ4"/>
-                            <constraint firstItem="fwd-OZ-2cG" firstAttribute="baseline" secondItem="BBR-rp-sJm" secondAttribute="baseline" type="default" id="q7c-8a-1kn"/>
+                            <constraint firstItem="fwd-OZ-2cG" firstAttribute="baseline" secondItem="BBR-rp-sJm" secondAttribute="baseline" id="q7c-8a-1kn"/>
                             <constraint firstItem="FGr-h4-53Q" firstAttribute="top" secondItem="3" secondAttribute="top" constant="232" id="qpG-rb-9JQ"/>
-                            <constraint firstItem="efg-nY-bFi" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="xk1-pc-XsF"/>
-                            <constraint firstItem="efg-nY-bFi" firstAttribute="centerX" secondItem="fwd-OZ-2cG" secondAttribute="centerX" type="default" id="zy9-Hh-9oP"/>
+                            <constraint firstItem="efg-nY-bFi" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" id="xk1-pc-XsF"/>
+                            <constraint firstItem="efg-nY-bFi" firstAttribute="centerX" secondItem="fwd-OZ-2cG" secondAttribute="centerX" id="zy9-Hh-9oP"/>
                         </constraints>
                     </view>
                     <connections>
